--- a/starterkit_app/pubspec.yaml
+++ b/starterkit_app/pubspec.yaml
@@ -4,17 +4,17 @@ publish_to: "none"
 version: 0.0.0
 
 environment:
-  sdk: ">=3.8.0 <4.0.0"
+  sdk: ">=3.10.0 <4.0.0"
 
 dependencies:
-  auto_route: ^10.1.0+1
+  auto_route: ^11.1.0
   collection: ^1.19.1
-  connectivity_plus: ^6.1.4
-  context_plus: ^6.0.5
+  connectivity_plus: ^7.0.0
+  context_plus: ^6.0.6
   cupertino_icons: ^1.0.8
-  dio: ^5.8.0+1
-  drift: ^2.28.1
-  drift_flutter: ^0.2.5
+  dio: ^5.9.0
+  drift: ^2.30.0
+  drift_flutter: ^0.2.8
   equatable: ^2.0.7
   file: ^7.0.1
   flutter:
@@ -22,30 +22,33 @@ dependencies:
   flutter_localization: ^0.3.3
   flutter_localizations:
     sdk: flutter
-  get_it: ^8.0.3
-  injectable: ^2.5.1
+  get_it: ^9.2.0
+  injectable: ^2.7.1+2
   intl: ^0.20.2
   json_annotation: ^4.9.0
-  meta: ^1.16.0
+  meta: ^1.17.0
   path: ^1.9.1
   path_provider: ^2.1.5
   platform: ^3.1.6
-  retrofit: ^4.6.0
-  uuid: ^4.5.1
+  retrofit: ^4.9.1
+  uuid: ^4.5.2
 
 dev_dependencies:
-  auto_route_generator: ^10.2.3
-  build_runner: ^2.5.4
-  drift_dev: ^2.28.0
-  flutter_gen_runner: ^5.11.0
+  auto_route_generator: ^10.3.1
+  build_runner: ^2.10.4
+  drift_dev: ^2.30.0
+  flutter_gen_runner: ^5.12.0
   flutter_test:
     sdk: flutter
   full_coverage: ^1.0.0
-  injectable_generator: ^2.7.0
-  intl_utils: ^2.8.11
-  json_serializable: ^6.9.5
-  mockito: ^5.4.6
-  retrofit_generator: ^9.7.0
+  injectable_generator: ^2.11.1
+  intl_utils: ^2.8.13
+  json_serializable: ^6.11.3
+  mockito: ^5.6.1
+  retrofit_generator: ^10.2.0
+
+dependency_overrides:
+  analyzer: ^8.2.0
 
 flutter:
   fonts:
