--- a/.github/workflows/steps/install-flutter/action.yml
+++ b/.github/workflows/steps/install-flutter/action.yml
@@ -9,7 +9,9 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: curl -fsSL https://fvm.app/install.sh | bash
+    - run: | 
+        curl -fsSL https://fvm.app/install.sh | bash
+        echo "$HOME/fvm/bin" >> $GITHUB_PATH
       shell: bash
 
     - run: fvm install
